--- a/uportal-war/src/main/webapp/media/skins/respondr/common/less/header.less
+++ b/uportal-war/src/main/webapp/media/skins/respondr/common/less/header.less
@@ -41,13 +41,16 @@
         }
 
         i {
-            padding-right: 0.35em;
+            /* padding-right: 0.35em;*/
         }
     }
 
     .portal-header-main {
         /* Need a bit off padding because the eyebrow will float on top */
         padding-top: 24px;
+        /* Need for the offcanvas open effect */
+        position: relative;
+        z-index: 10;
     }
 
     .portal-nav {
